limit memory on test.