@@ -356,6 +356,16 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.18.1</version>
+			    <configuration>
+			        <forkCount>1</forkCount>
+			        <reuseForks>true</reuseForks>
+			        <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
+			    </configuration>
+			  </plugin>
 		</plugins>
 	</build>
 
